crates/capsec/tests/compile_fail/subsumption_not_reversed.stderr
error[E0277]: the trait bound `Cap<capsec::FsRead>: capsec::Has<capsec::FsAll>` is not satisfied
  --> tests/compile_fail/subsumption_not_reversed.rs:10:18
   |
10 |     needs_fs_all(&fs_read);
   |     ------------ ^^^^^^^^ the trait `capsec::Has<capsec::FsAll>` is not implemented for `Cap<capsec::FsRead>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `capsec::Has<P>`:
             `Cap<Ambient>` implements `capsec::Has<EnvRead>`
             `Cap<Ambient>` implements `capsec::Has<EnvWrite>`
             `Cap<Ambient>` implements `capsec::Has<FsWrite>`
             `Cap<Ambient>` implements `capsec::Has<NetAll>`
             `Cap<Ambient>` implements `capsec::Has<NetBind>`
             `Cap<Ambient>` implements `capsec::Has<NetConnect>`
             `Cap<Ambient>` implements `capsec::Has<Spawn>`
             `Cap<Ambient>` implements `capsec::Has<capsec::FsAll>`
           and $N others
note: required by a bound in `needs_fs_all`
  --> tests/compile_fail/subsumption_not_reversed.rs:5:26
   |
 5 | fn needs_fs_all(_: &impl Has<FsAll>) {}
   |                          ^^^^^^^^^^ required by this bound in `needs_fs_all`
